@@ -1,4 +1,4 @@
 # This Build.PL for RDF-aREF was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
 use v5.10.0;
-use Module::Build::Tiny 0.037;
+use Module::Build::Tiny 0.039;
 Build_PL();
