@@ -1,5 +1,7 @@
 requires 'perl', '5.10.0';
 requires 'RDF::NS', '20140910';
 
+suggests 'RDF::Trine';
+
 test_requires 'JSON';
 test_requires 'RDF::Trine';
