@@ -1,10 +1,12 @@
 use strict;
 use Test::More;
 use RDF::aREF;
+use RDF::aREF::Encoder;
 
 BEGIN {
     eval { 
-        require RDF::Trine::Model; 
+        require RDF::Trine;
+        RDF::Trine->import(qw(statement iri literal));
         1; 
     } or do {
         plan skip_all => "RDF::Trine required";
@@ -15,16 +17,24 @@ my $model = RDF::Trine::Model->new;
 
 decode_aref( {
         _id => 'http://example.org/alice',
-        a => 'foaf:Person',
+        a => 'foaf_Person',
         foaf_knowns => 'http://example.org/bob'
     }, 
     callback => $model,
 );
 is $model->size, 2, 'added two statements';
 
+my $aref = encode_aref $model;
+is_deeply $aref, {
+       'http://example.org/alice' => {
+         'a' => 'foaf_Person',
+         'foaf_knowns' => '<http://example.org/bob>'
+       }
+    }, 'encode_aref from RDF::Trine::Model';
+
 decode_aref( {
         _id => 'http://example.org/alice',
-        a => 'foaf:Person',
+        a => 'foaf_Person',
         foaf_knowns => 'http://example.org/claire'
     },
     callback => $model,
@@ -58,5 +68,24 @@ decode_aref( {
 ok $warning, "bad IRI";
 is $model->size, 5, 'ignored illformed URI';
 
+my $encoder = RDF::aREF::Encoder->new(ns => '20140910');
+my $aref = { };
+$encoder->add_triple( $aref, statement( 
+    iri('http://example.org/'),
+    iri('http://www.w3.org/1999/02/22-rdf-syntax-ns#type'),
+    iri('http://xmlns.com/foaf/0.1/Agent'),
+) );
+$encoder->add_triple( $aref, statement( 
+    iri('http://example.org/'),
+    iri('http://xmlns.com/foaf/0.1/name'),
+    literal('Anne','de'),
+) );
+
+is_deeply $aref, {
+    'http://example.org/' => {
+        a => 'foaf_Agent',
+        foaf_name => 'Anne@de'
+    }
+}, 'encoder add_triple';
 
 done_testing;
