@@ -1,6 +1,8 @@
 # Changelog for RDF-aREF
 
 {{$NEXT}}
+  - added encoding methods
+  - removed internal method aref_to_trine_statement (issue #6)
 
 0.18  2014-10-14 10:35:56 CEST
   - implement aref_query_map (issue #7)
